@@ -846,8 +846,8 @@ Flow Record:
   output       =                14
   src as       =               775
   dst as       =              8404
-  src mask     =                16 fe80::2110:abcd:1234:0/16
-  dst mask     =                24 fe80::2110:abcd:1200:0/24
+  src mask     =                16 fe80::/16
+  dst mask     =                24 fe80::/24
   dst tos      =               128
   direction    =                 1
   ip next hop  =        172.72.1.2
@@ -887,8 +887,8 @@ Flow Record:
   last         =        1089534930 [2004-07-11 10:35:30]
   msec_first   =               610
   msec_last    =               620
-  src addr     =  2001:234:aabb::211:24ff:fe80:d01e
-  dst addr     =  2001:620::8:203:baff:fe52:38e5
+  src addr     =  2001:234:aabb:cc:211:24ff:fe80:d01e
+  dst addr     =  2001:620:1f:8:203:baff:fe52:38e5
   src port     =             10240
   dst port     =             52345
   fwd status   =                17
@@ -901,8 +901,8 @@ Flow Record:
   output       =                14
   src as       =               775
   dst as       =              8404
-  src mask     =                16 2001:234:aabb::211:24ff:fe80:0/16
-  dst mask     =                24 2001:620::8:203:baff:fe00:0/24
+  src mask     =                88 2001:234:aabb:cc:211:2400::/88
+  dst mask     =                48 2001:620:1f::/48
   dst tos      =               128
   direction    =                 1
   ip next hop  =        172.72.1.2
@@ -942,8 +942,8 @@ Flow Record:
   last         =        1089534950 [2004-07-11 10:35:50]
   msec_first   =               710
   msec_last    =               720
-  src addr     =  2001:234:aabb::211:24ff:fe80:d01e
-  dst addr     =  2001:620::8:203:baff:fe52:38e5
+  src addr     =  2001:234:aabb:cc:211:24ff:fe80:d01e
+  dst addr     =  2001:620:1f:8:203:baff:fe52:38e5
   src port     =             10240
   dst port     =             52345
   fwd status   =                18
@@ -956,8 +956,8 @@ Flow Record:
   output       =                14
   src as       =               775
   dst as       =              8404
-  src mask     =                16 2001:234:aabb::211:24ff:fe80:0/16
-  dst mask     =                24 2001:620::8:203:baff:fe00:0/24
+  src mask     =                88 2001:234:aabb:cc:211:2400::/88
+  dst mask     =                48 2001:620:1f::/48
   dst tos      =               128
   direction    =                 1
   ip next hop  =        172.72.1.2
@@ -997,8 +997,8 @@ Flow Record:
   last         =        1089534970 [2004-07-11 10:36:10]
   msec_first   =               810
   msec_last    =               820
-  src addr     =  2001:234:aabb::211:24ff:fe80:d01e
-  dst addr     =  2001:620::8:203:baff:fe52:38e5
+  src addr     =  2001:234:aabb:cc:211:24ff:fe80:d01e
+  dst addr     =  2001:620:1f:8:203:baff:fe52:38e5
   src port     =             10240
   dst port     =             52345
   fwd status   =                19
@@ -1011,8 +1011,8 @@ Flow Record:
   output       =                14
   src as       =               775
   dst as       =              8404
-  src mask     =                16 2001:234:aabb::211:24ff:fe80:0/16
-  dst mask     =                24 2001:620::8:203:baff:fe00:0/24
+  src mask     =                88 2001:234:aabb:cc:211:2400::/88
+  dst mask     =                48 2001:620:1f::/48
   dst tos      =               128
   direction    =                 1
   ip next hop  =        172.72.1.2
@@ -1052,8 +1052,8 @@ Flow Record:
   last         =        1089534990 [2004-07-11 10:36:30]
   msec_first   =               910
   msec_last    =               920
-  src addr     =  2001:234:aabb::211:24ff:fe80:d01e
-  dst addr     =  2001:620::8:203:baff:fe52:38e5
+  src addr     =  2001:234:aabb:cc:211:24ff:fe80:d01e
+  dst addr     =  2001:620:1f:8:203:baff:fe52:38e5
   src port     =             10240
   dst port     =             52345
   fwd status   =                20
@@ -1066,8 +1066,8 @@ Flow Record:
   output       =                14
   src as       =               775
   dst as       =              8404
-  src mask     =                16 2001:234:aabb::211:24ff:fe80:0/16
-  dst mask     =                24 2001:620::8:203:baff:fe00:0/24
+  src mask     =                88 2001:234:aabb:cc:211:2400::/88
+  dst mask     =                48 2001:620:1f::/48
   dst tos      =               128
   direction    =                 1
   ip next hop  =        172.72.1.2
