@@ -1,7 +1,5 @@
 /*
- *  Copyright (c) 2017, Peter Haag
- *  Copyright (c) 2014, Peter Haag
- *  Copyright (c) 2009, Peter Haag
+ *  Copyright (c) 2009-2020 Peter Haag
  *  Copyright (c) 2004-2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
  *  All rights reserved.
  *  
@@ -29,12 +27,6 @@
  *  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE 
  *  POSSIBILITY OF SUCH DAMAGE.
  *  
- *  $Author: haag $
- *
- *  $Id: nfgen.c 39 2009-11-25 08:11:15Z haag $
- *
- *  $LastChangedRevision: 39 $
- *	
  */
 
 #include "config.h"
@@ -431,7 +423,9 @@ nffile_t			*nffile;
 	UpdateRecord(&record);
 	PackRecord(&record, nffile);
 
-	SetIPaddress(&record,  PF_INET6, "2001:234:aabb::211:24ff:fe80:d01e", "2001:620::8:203:baff:fe52:38e5");
+	SetIPaddress(&record,  PF_INET6, "2001:234:aabb:cc:211:24ff:fe80:d01e", "2001:620:1f:8:203:baff:fe52:38e5");
+	record.src_mask		= 88;
+	record.dst_mask		= 48;
 	record.srcport 	 = 10240;
 	record.dstport 	 = 52345;
 	record.dPkts 	 = 10100;
@@ -460,6 +454,8 @@ nffile_t			*nffile;
 	SetIPaddress(&record,  PF_INET, "172.16.14.18", "192.168.170.113");
 //	SetNextIPaddress(&record,  PF_INET, "172.72.1.2");
 //	SetBGPNextIPaddress(&record,  PF_INET, "172.73.2.3");
+	record.src_mask		= 16;
+	record.dst_mask		= 24;
 	record.srcport 	 = 10240;
 	record.dstport 	 = 52345;
 	record.dPkts 	 = 10100000;
