@@ -1,7 +1,5 @@
 /*
- *  Copyright (c) 2016, Peter Haag
- *  Copyright (c) 2014, Peter Haag
- *  Copyright (c) 2009, Peter Haag
+ *  Copyright (c) 2009-2020, Peter Haag
  *  Copyright (c) 2004-2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
  *  All rights reserved.
  *  
@@ -43,6 +41,7 @@
 #include <errno.h>
 #include <sys/types.h>
 #include <sys/select.h>
+#include <arpa/inet.h>
 
 #ifndef SYSLOG_NAMES
 #	define SYSLOG_NAMES 1
@@ -567,4 +566,35 @@ double f = num;
 
 } // End of format_number
 
+void inet_ntop_mask(uint32_t ipv4, int mask, char *s, size_t sSize) {
 
+	if ( mask ) {
+		ipv4 &= 0xffffffffL << ( 32 - mask );
+		ipv4 = htonl(ipv4);
+		inet_ntop(AF_INET, &ipv4, s, sSize);
+	} else {
+		s[0] = '\0';
+	}
+
+} // End of inet_ntop_mask
+
+void inet6_ntop_mask(uint64_t ipv6[2], int mask, char *s, size_t sSize) {
+    uint64_t ip[2];
+
+    ip[0] = ipv6[0];
+    ip[1] = ipv6[1];
+    if ( mask ) {
+        if ( mask <= 64 ) {
+            ip[0] = ip[0] & (0xffffffffffffffffLL << (64 - mask));
+            ip[1] = 0;
+        } else {
+            ip[1] = ip[1] & (0xffffffffffffffffLL << (128 - mask));
+        }
+        ip[0] = htonll(ip[0]);
+        ip[1] = htonll(ip[1]);
+        inet_ntop(AF_INET6, ip, s, sSize);
+
+    } else {
+        s[0] = '\0';
+    }
+} // End of inet_ntop_mask
